adds security.txt

--- a/programs/bridge_cards/Cargo.toml
+++ b/programs/bridge_cards/Cargo.toml
@@ -25,7 +25,7 @@ account-data-macro-derive = { path = "../../account-data-macro-derive" }
 # Explicit version needed to fix IDL build 
 # https://github.com/solana-foundation/anchor/issues/3681
 proc-macro2 = "1.0.95"
-
+solana-security-txt = "1.1.1"
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ['cfg(solana)'] }
