--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,11 +7,14 @@ package_manager = "yarn"
 resolution = true
 skip-lint = false
 
-[programs.localnet]
-bridge_cards = "E7vM2tFMoHU49pqTgaoGDcCRAFGYs2w6rKPsRQJuukgA"
-
 [programs.devnet]
-bridge_cards = "E7vM2tFMoHU49pqTgaoGDcCRAFGYs2w6rKPsRQJuukgA"
+bridge_cards = "cardWArqhdV5jeRXXjUti7cHAa4mj41Nj3Apc6RPZH2"
+
+[programs.localnet]
+bridge_cards = "cardWArqhdV5jeRXXjUti7cHAa4mj41Nj3Apc6RPZH2"
+
+[programs.mainnet]
+bridge_cards = "cardWArqhdV5jeRXXjUti7cHAa4mj41Nj3Apc6RPZH2"
 
 [registry]
 url = "https://api.apr.dev"
@@ -31,6 +34,8 @@ wallet = "~/.config/solana/id.json"
 url = "http://127.0.0.1:8899"
 
 [scripts]
+build = "export PROGRAM_ID=$(solana-keygen pubkey program-keypair.json) && anchor build"
+initialize = "ts-node scripts/initialize.ts"
 test = "cargo test"
 initialize = "ts-node scripts/initialize.ts"
 build = "export PROGRAM_ID=$(solana-keygen pubkey program-keypair.json) && anchor build"
