--- a/.github/workflows/rust-checks.yml
+++ b/.github/workflows/rust-checks.yml
@@ -26,7 +26,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy
+        run: cargo clippy -- -D warnings
 
   anchor-test:
     name: Run Anchor Tests
